# hbpprak_locomotion

./: .gitignore  README.md
Experiments/lauron_snn/: ExDLauronSNN.exc  MotionPrimitives.py  initialize_lauron.py  monitor_population.py  motion_primitive_sm.exd  motion_primitive_sm.exdc  neuron_to_robot.py  neuron_to_robot_gallop.py  neuron_to_robot_tripod.py  robot_to_neuron.py  robot_to_neuron_gallop.py  robot_to_neuron_tripod.py  simple_move_robot.py  template_lauron.bibi
IPython Tutorials/: How to Nengo.ipynb  Lauron QWOP.ipynb
IPythonTutorials/: HowToNengo.ipynb  LauronQWOP.ipynb
Models/brain_model/: hexapod.py  hexapod_gallop.py
Models/lauron_model/: CMakeLists.txt  lauron_ext_controller.sh  model.config  model.urdf  package.xml
Nengo/: RLEnvironment.py  RLTask.py  main.py  motionPrimitivesNoNengo.py
