<?xml version="1.0"?>
<package>
  <name>lauron_model</name>
  <version>0.1.0</version>
  <description>SDF description for HBP LAURON V</description>

  <maintainer email="pfotzer@fzi.de">Lars Pfotzer</maintainer>
  <author email="pfotzer@fzi.de">Lars Pfotzer</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
